--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
+gspread==5.12.0
 python-dotenv==1.0.0
 psycopg2-binary>=2.9.0
 gunicorn==21.2.0
