--- a/backend/env.example
+++ b/backend/env.example
@@ -15,3 +15,6 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # JWT 설정
 JWT_SECRET_KEY=your-jwt-secret-key
+
+# Google Gemini API 설정 (LLM 이미지 분석용)
+GOOGLE_API_KEY=your-google-gemini-api-key
