feat: 이메일 인증 기능 추가 및 회원가입 시 비밀번호 검증 로직 구현

--- a/backend/env.example
+++ b/backend/env.example
@@ -18,3 +18,7 @@ JWT_SECRET_KEY=your-jwt-secret-key
 
 # Google Gemini API 설정 (LLM 이미지 분석용)
 GOOGLE_API_KEY=your-google-gemini-api-key
+
+# 이메일 인증 설정 (Gmail SMTP)
+MAIL_USERNAME=your-gmail@gmail.com
+MAIL_PASSWORD=your-app-password
