--- a/backend/env.example
+++ b/backend/env.example
@@ -22,3 +22,8 @@ GOOGLE_API_KEY=your-google-gemini-api-key
 # 이메일 인증 설정 (Gmail SMTP)
 MAIL_USERNAME=your-gmail@gmail.com
 MAIL_PASSWORD=your-app-password
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USE_SSL=false
+MAIL_DEBUG=true
