feat: Flask 세션 및 JWT 설정 추가, 개인정보 접근 토큰 검증 로직 개선

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -13,7 +13,5 @@
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
   ],
-  "env": {
-    "REACT_APP_API_URL": "https://api.hsyun.store"
-  }
+  "env": {}
 }
