--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.400.0"
   },
   "scripts": {
     "start": "react-scripts start",
