--- a/backend/env.example
+++ b/backend/env.example
@@ -38,3 +38,9 @@ MAIL_PORT=587
 MAIL_USE_TLS=true
 MAIL_USE_SSL=false
 MAIL_DEBUG=true
+
+# Firebase Cloud Messaging 설정 (푸시 알림용)
+# 방법 1: 서비스 계정 키 파일 경로
+FIREBASE_CREDENTIALS_PATH=/path/to/firebase-service-account-key.json
+# 방법 2: 서비스 계정 키 JSON 문자열 (환경변수로 직접 설정)
+# FIREBASE_CREDENTIALS_JSON={"type":"service_account","project_id":"...","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."}
