--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,3 +23,6 @@ requests>=2.31.0
 # Email verification
 flask-mail>=0.9.1
 itsdangerous>=2.1.2
+
+# Firebase Admin SDK for push notifications
+firebase-admin>=6.2.0
