--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,15 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.4.0",
     "chart.js": "^4.5.1",
+    "firebase": "^12.6.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.400.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.400.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
